infrastructure/apps/metabase/base/metabase.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  labels:
    app: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
        - name: metabase
          image: metabase/metabase:v0.50.27
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: trino-keystore
              mountPath: /etc/metabase/ssl
              readOnly: true
            - name: plugins
              mountPath: /plugins
          ports:
            - containerPort: 3000
      volumes:
        - name: trino-keystore
          secret:
            secretName: trino-keystore
        - name: plugins
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: metabase
  labels:
    app: metabase
spec:
  selector:
    app: metabase
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
