infrastructure/apps/metabase/base/metabase-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: metabase
spec:
  ingressClassName: nginx
  rules:
    - host: metabase.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metabase
                port:
                  number: 3000
